Replaced el to jboss el for PFEShow project

--- a/PFEShow/src/resources/el.properties
+++ b/PFEShow/src/resources/el.properties
@@ -1,4 +1,5 @@
-javax.el.ExpressionFactory=de.odysseus.el.ExpressionFactoryImpl
+#javax.el.ExpressionFactory=de.odysseus.el.ExpressionFactoryImpl
+javax.el.ExpressionFactory=org.jboss.el.ExpressionFactoryImpl
 javax.el.methodInvocations=true
 javax.el.ignoreReturnType=true
 javax.el.cacheSize=3000
