--- a/PFEShow/WebContent/WEB-INF/web.xml
+++ b/PFEShow/WebContent/WEB-INF/web.xml
@@ -48,14 +48,14 @@
     </context-param>
     <context-param>
         <param-name>com.sun.faces.expressionFactory</param-name>
-        <param-value>de.odysseus.el.ExpressionFactoryImpl</param-value>
+        <param-value>org.jboss.el.ExpressionFactoryImpl</param-value>
     </context-param>
 
 	<!-- Context parameters - MyFaces -->
-    <context-param>
+<!--    <context-param>
         <param-name>org.apache.myfaces.EXPRESSION_FACTORY</param-name>
         <param-value>de.odysseus.el.ExpressionFactoryImpl</param-value>
-    </context-param>
+    </context-param>-->
 
 	<!-- Context parameters - Primefaces & Extensions -->
     <context-param>
